// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomsProcedures CustomsProcedures renders as expected 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "t": [Function],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "t": [Function],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`CustomsProcedures CustomsProcedures renders as expected 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    i18n={
      Object {
        "language": "de",
      }
    }
    navigation={
      Object {
        "dispatch": [Function],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "i18n": Object {
        "language": "de",
      },
      "navigation": Object {
        "dispatch": [Function],
      },
      "t": [Function],
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "i18n": Object {
          "language": "de",
        },
        "navigation": Object {
          "dispatch": [Function],
        },
        "t": [Function],
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`CustomsProcedures CustomsProcedures renders as expected with language and with dive() 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CustomsProceduresInner
    i18n={
      Object {
        "language": "de",
        "t": "test",
      }
    }
    navigation={
      Object {
        "dispatch": [Function],
      }
    }
    t={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <AppInfoSubText
          greyBox={false}
          style={
            Object {
              "marginVertical": 19.61764705882353,
            }
          }
          text=""
        />,
        <AppInfoSubText
          greyBox={false}
          style={Object {}}
          text=""
        />,
        <BulletText
          additionalText=""
          additionalTextStyle={Object {}}
          style={Object {}}
          text=""
        />,
        <BulletText
          additionalText=""
          additionalTextStyle={Object {}}
          style={Object {}}
          text=""
        />,
        <AppInfoSubText
          greyBox={false}
          style={
            Object {
              "marginVertical": 19.61764705882353,
            }
          }
          text=""
        />,
        <AppInfoSubText
          greyBox={false}
          style={Object {}}
          text=""
        />,
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[Function]}
        >
          <BulletText
            additionalText=""
            additionalTextStyle={Object {}}
            style={
              Object {
                "textDecorationLine": "underline",
                "textDecorationStyle": "solid",
              }
            }
            text=""
          />
        </TouchableOpacity>,
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[Function]}
        >
          <BulletText
            additionalText=""
            additionalTextStyle={Object {}}
            style={
              Object {
                "textDecorationLine": "underline",
                "textDecorationStyle": "solid",
              }
            }
            text=""
          />
        </TouchableOpacity>,
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[Function]}
        >
          <BulletText
            additionalText=""
            additionalTextStyle={Object {}}
            style={
              Object {
                "textDecorationLine": "underline",
                "textDecorationStyle": "solid",
              }
            }
            text=""
          />
        </TouchableOpacity>,
        <CardRowText
          greyBox={false}
          style={
            Object {
              "marginTop": 39.23529411764706,
            }
          }
          text=""
        />,
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#1A1A1A",
              "fontFamily": "roboto_light",
              "fontWeight": "300",
              "lineHeight": 33,
            }
          }
        >
          <UNDEFINED
            i18nKey="customsProceduresText11"
          >
            #
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              onPress={[Function]}
              style={
                Object {
                  "textDecorationLine": "underline",
                }
              }
            >
              #
            </Text>
            #
          </UNDEFINED>
        </Text>,
        <CardRowText
          greyBox={false}
          style={
            Object {
              "marginTop": 39.23529411764706,
            }
          }
          text=""
        />,
        <AppInfoSubText
          greyBox={false}
          style={Object {}}
          text=""
        />,
        <AppInfoSubText
          greyBox={false}
          style={
            Object {
              "marginTop": 19.61764705882353,
            }
          }
          text=""
        />,
        <AppInfoSubText
          greyBox={false}
          style={
            Object {
              "marginTop": 19.61764705882353,
            }
          }
          text=""
        />,
        <CardRowText
          greyBox={false}
          style={
            Object {
              "marginTop": 39.23529411764706,
            }
          }
          text=""
        />,
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#1A1A1A",
              "fontFamily": "roboto_light",
              "fontWeight": "300",
              "lineHeight": 33,
            }
          }
        >
          <UNDEFINED
            i18nKey="customsProceduresText17"
          >
            #
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              onPress={[Function]}
              style={
                Object {
                  "textDecorationLine": "underline",
                }
              }
            >
              #
            </Text>
            #
          </UNDEFINED>
        </Text>,
        <AppInfoSubText
          greyBox={false}
          style={
            Object {
              "marginVertical": 19.61764705882353,
            }
          }
          text=""
        />,
        <AppInfoSubText
          greyBox={false}
          style={
            Object {
              "marginBottom": 19.61764705882353,
            }
          }
          text=""
        />,
        <CardRowText
          greyBox={true}
          style={
            Object {
              "paddingTop": 15.714285714285714,
            }
          }
          text=""
        />,
        <AppInfoSubText
          greyBox={true}
          style={
            Object {
              "marginBottom": 19.61764705882353,
              "paddingTop": 0,
            }
          }
          text=""
        />,
      ],
      "title": "",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "greyBox": false,
          "style": Object {
            "marginVertical": 19.61764705882353,
          },
          "text": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "greyBox": false,
          "style": Object {},
          "text": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "additionalText": "",
          "additionalTextStyle": Object {},
          "style": Object {},
          "text": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "additionalText": "",
          "additionalTextStyle": Object {},
          "style": Object {},
          "text": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "greyBox": false,
          "style": Object {
            "marginVertical": 19.61764705882353,
          },
          "text": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "greyBox": false,
          "style": Object {},
          "text": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": <BulletText
            additionalText=""
            additionalTextStyle={Object {}}
            style={
              Object {
                "textDecorationLine": "underline",
                "textDecorationStyle": "solid",
              }
            }
            text=""
          />,
          "onPress": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "additionalText": "",
            "additionalTextStyle": Object {},
            "style": Object {
              "textDecorationLine": "underline",
              "textDecorationStyle": "solid",
            },
            "text": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": <BulletText
            additionalText=""
            additionalTextStyle={Object {}}
            style={
              Object {
                "textDecorationLine": "underline",
                "textDecorationStyle": "solid",
              }
            }
            text=""
          />,
          "onPress": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "additionalText": "",
            "additionalTextStyle": Object {},
            "style": Object {
              "textDecorationLine": "underline",
              "textDecorationStyle": "solid",
            },
            "text": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": <BulletText
            additionalText=""
            additionalTextStyle={Object {}}
            style={
              Object {
                "textDecorationLine": "underline",
                "textDecorationStyle": "solid",
              }
            }
            text=""
          />,
          "onPress": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "additionalText": "",
            "additionalTextStyle": Object {},
            "style": Object {
              "textDecorationLine": "underline",
              "textDecorationStyle": "solid",
            },
            "text": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "greyBox": false,
          "style": Object {
            "marginTop": 39.23529411764706,
          },
          "text": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accessible": true,
          "allowFontScaling": true,
          "children": <UNDEFINED
            i18nKey="customsProceduresText11"
          >
            #
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              onPress={[Function]}
              style={
                Object {
                  "textDecorationLine": "underline",
                }
              }
            >
              #
            </Text>
            #
          </UNDEFINED>,
          "ellipsizeMode": "tail",
          "style": Object {
            "color": "#1A1A1A",
            "fontFamily": "roboto_light",
            "fontWeight": "300",
            "lineHeight": 33,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              "#",
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                onPress={[Function]}
                style={
                  Object {
                    "textDecorationLine": "underline",
                  }
                }
              >
                #
              </Text>,
              "#",
            ],
            "i18nKey": "customsProceduresText11",
          },
          "ref": null,
          "rendered": Array [
            "#",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "accessible": true,
                "allowFontScaling": true,
                "children": "#",
                "ellipsizeMode": "tail",
                "onPress": [Function],
                "style": Object {
                  "textDecorationLine": "underline",
                },
              },
              "ref": null,
              "rendered": "#",
              "type": [Function],
            },
            "#",
          ],
          "type": undefined,
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "greyBox": false,
          "style": Object {
            "marginTop": 39.23529411764706,
          },
          "text": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "greyBox": false,
          "style": Object {},
          "text": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "greyBox": false,
          "style": Object {
            "marginTop": 19.61764705882353,
          },
          "text": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "greyBox": false,
          "style": Object {
            "marginTop": 19.61764705882353,
          },
          "text": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "greyBox": false,
          "style": Object {
            "marginTop": 39.23529411764706,
          },
          "text": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accessible": true,
          "allowFontScaling": true,
          "children": <UNDEFINED
            i18nKey="customsProceduresText17"
          >
            #
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              onPress={[Function]}
              style={
                Object {
                  "textDecorationLine": "underline",
                }
              }
            >
              #
            </Text>
            #
          </UNDEFINED>,
          "ellipsizeMode": "tail",
          "style": Object {
            "color": "#1A1A1A",
            "fontFamily": "roboto_light",
            "fontWeight": "300",
            "lineHeight": 33,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              "#",
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                onPress={[Function]}
                style={
                  Object {
                    "textDecorationLine": "underline",
                  }
                }
              >
                #
              </Text>,
              "#",
            ],
            "i18nKey": "customsProceduresText17",
          },
          "ref": null,
          "rendered": Array [
            "#",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "accessible": true,
                "allowFontScaling": true,
                "children": "#",
                "ellipsizeMode": "tail",
                "onPress": [Function],
                "style": Object {
                  "textDecorationLine": "underline",
                },
              },
              "ref": null,
              "rendered": "#",
              "type": [Function],
            },
            "#",
          ],
          "type": undefined,
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "greyBox": false,
          "style": Object {
            "marginVertical": 19.61764705882353,
          },
          "text": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "greyBox": false,
          "style": Object {
            "marginBottom": 19.61764705882353,
          },
          "text": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "greyBox": true,
          "style": Object {
            "paddingTop": 15.714285714285714,
          },
          "text": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "greyBox": true,
          "style": Object {
            "marginBottom": 19.61764705882353,
            "paddingTop": 0,
          },
          "text": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <AppInfoSubText
            greyBox={false}
            style={
              Object {
                "marginVertical": 19.61764705882353,
              }
            }
            text=""
          />,
          <AppInfoSubText
            greyBox={false}
            style={Object {}}
            text=""
          />,
          <BulletText
            additionalText=""
            additionalTextStyle={Object {}}
            style={Object {}}
            text=""
          />,
          <BulletText
            additionalText=""
            additionalTextStyle={Object {}}
            style={Object {}}
            text=""
          />,
          <AppInfoSubText
            greyBox={false}
            style={
              Object {
                "marginVertical": 19.61764705882353,
              }
            }
            text=""
          />,
          <AppInfoSubText
            greyBox={false}
            style={Object {}}
            text=""
          />,
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
          >
            <BulletText
              additionalText=""
              additionalTextStyle={Object {}}
              style={
                Object {
                  "textDecorationLine": "underline",
                  "textDecorationStyle": "solid",
                }
              }
              text=""
            />
          </TouchableOpacity>,
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
          >
            <BulletText
              additionalText=""
              additionalTextStyle={Object {}}
              style={
                Object {
                  "textDecorationLine": "underline",
                  "textDecorationStyle": "solid",
                }
              }
              text=""
            />
          </TouchableOpacity>,
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
          >
            <BulletText
              additionalText=""
              additionalTextStyle={Object {}}
              style={
                Object {
                  "textDecorationLine": "underline",
                  "textDecorationStyle": "solid",
                }
              }
              text=""
            />
          </TouchableOpacity>,
          <CardRowText
            greyBox={false}
            style={
              Object {
                "marginTop": 39.23529411764706,
              }
            }
            text=""
          />,
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#1A1A1A",
                "fontFamily": "roboto_light",
                "fontWeight": "300",
                "lineHeight": 33,
              }
            }
          >
            <UNDEFINED
              i18nKey="customsProceduresText11"
            >
              #
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                onPress={[Function]}
                style={
                  Object {
                    "textDecorationLine": "underline",
                  }
                }
              >
                #
              </Text>
              #
            </UNDEFINED>
          </Text>,
          <CardRowText
            greyBox={false}
            style={
              Object {
                "marginTop": 39.23529411764706,
              }
            }
            text=""
          />,
          <AppInfoSubText
            greyBox={false}
            style={Object {}}
            text=""
          />,
          <AppInfoSubText
            greyBox={false}
            style={
              Object {
                "marginTop": 19.61764705882353,
              }
            }
            text=""
          />,
          <AppInfoSubText
            greyBox={false}
            style={
              Object {
                "marginTop": 19.61764705882353,
              }
            }
            text=""
          />,
          <CardRowText
            greyBox={false}
            style={
              Object {
                "marginTop": 39.23529411764706,
              }
            }
            text=""
          />,
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#1A1A1A",
                "fontFamily": "roboto_light",
                "fontWeight": "300",
                "lineHeight": 33,
              }
            }
          >
            <UNDEFINED
              i18nKey="customsProceduresText17"
            >
              #
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                onPress={[Function]}
                style={
                  Object {
                    "textDecorationLine": "underline",
                  }
                }
              >
                #
              </Text>
              #
            </UNDEFINED>
          </Text>,
          <AppInfoSubText
            greyBox={false}
            style={
              Object {
                "marginVertical": 19.61764705882353,
              }
            }
            text=""
          />,
          <AppInfoSubText
            greyBox={false}
            style={
              Object {
                "marginBottom": 19.61764705882353,
              }
            }
            text=""
          />,
          <CardRowText
            greyBox={true}
            style={
              Object {
                "paddingTop": 15.714285714285714,
              }
            }
            text=""
          />,
          <AppInfoSubText
            greyBox={true}
            style={
              Object {
                "marginBottom": 19.61764705882353,
                "paddingTop": 0,
              }
            }
            text=""
          />,
        ],
        "title": "",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "greyBox": false,
            "style": Object {
              "marginVertical": 19.61764705882353,
            },
            "text": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "greyBox": false,
            "style": Object {},
            "text": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "additionalText": "",
            "additionalTextStyle": Object {},
            "style": Object {},
            "text": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "additionalText": "",
            "additionalTextStyle": Object {},
            "style": Object {},
            "text": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "greyBox": false,
            "style": Object {
              "marginVertical": 19.61764705882353,
            },
            "text": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "greyBox": false,
            "style": Object {},
            "text": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": <BulletText
              additionalText=""
              additionalTextStyle={Object {}}
              style={
                Object {
                  "textDecorationLine": "underline",
                  "textDecorationStyle": "solid",
                }
              }
              text=""
            />,
            "onPress": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "additionalText": "",
              "additionalTextStyle": Object {},
              "style": Object {
                "textDecorationLine": "underline",
                "textDecorationStyle": "solid",
              },
              "text": "",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": <BulletText
              additionalText=""
              additionalTextStyle={Object {}}
              style={
                Object {
                  "textDecorationLine": "underline",
                  "textDecorationStyle": "solid",
                }
              }
              text=""
            />,
            "onPress": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "additionalText": "",
              "additionalTextStyle": Object {},
              "style": Object {
                "textDecorationLine": "underline",
                "textDecorationStyle": "solid",
              },
              "text": "",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": <BulletText
              additionalText=""
              additionalTextStyle={Object {}}
              style={
                Object {
                  "textDecorationLine": "underline",
                  "textDecorationStyle": "solid",
                }
              }
              text=""
            />,
            "onPress": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "additionalText": "",
              "additionalTextStyle": Object {},
              "style": Object {
                "textDecorationLine": "underline",
                "textDecorationStyle": "solid",
              },
              "text": "",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "greyBox": false,
            "style": Object {
              "marginTop": 39.23529411764706,
            },
            "text": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": <UNDEFINED
              i18nKey="customsProceduresText11"
            >
              #
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                onPress={[Function]}
                style={
                  Object {
                    "textDecorationLine": "underline",
                  }
                }
              >
                #
              </Text>
              #
            </UNDEFINED>,
            "ellipsizeMode": "tail",
            "style": Object {
              "color": "#1A1A1A",
              "fontFamily": "roboto_light",
              "fontWeight": "300",
              "lineHeight": 33,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                "#",
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  onPress={[Function]}
                  style={
                    Object {
                      "textDecorationLine": "underline",
                    }
                  }
                >
                  #
                </Text>,
                "#",
              ],
              "i18nKey": "customsProceduresText11",
            },
            "ref": null,
            "rendered": Array [
              "#",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "accessible": true,
                  "allowFontScaling": true,
                  "children": "#",
                  "ellipsizeMode": "tail",
                  "onPress": [Function],
                  "style": Object {
                    "textDecorationLine": "underline",
                  },
                },
                "ref": null,
                "rendered": "#",
                "type": [Function],
              },
              "#",
            ],
            "type": undefined,
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "greyBox": false,
            "style": Object {
              "marginTop": 39.23529411764706,
            },
            "text": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "greyBox": false,
            "style": Object {},
            "text": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "greyBox": false,
            "style": Object {
              "marginTop": 19.61764705882353,
            },
            "text": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "greyBox": false,
            "style": Object {
              "marginTop": 19.61764705882353,
            },
            "text": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "greyBox": false,
            "style": Object {
              "marginTop": 39.23529411764706,
            },
            "text": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": <UNDEFINED
              i18nKey="customsProceduresText17"
            >
              #
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                onPress={[Function]}
                style={
                  Object {
                    "textDecorationLine": "underline",
                  }
                }
              >
                #
              </Text>
              #
            </UNDEFINED>,
            "ellipsizeMode": "tail",
            "style": Object {
              "color": "#1A1A1A",
              "fontFamily": "roboto_light",
              "fontWeight": "300",
              "lineHeight": 33,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                "#",
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  onPress={[Function]}
                  style={
                    Object {
                      "textDecorationLine": "underline",
                    }
                  }
                >
                  #
                </Text>,
                "#",
              ],
              "i18nKey": "customsProceduresText17",
            },
            "ref": null,
            "rendered": Array [
              "#",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "accessible": true,
                  "allowFontScaling": true,
                  "children": "#",
                  "ellipsizeMode": "tail",
                  "onPress": [Function],
                  "style": Object {
                    "textDecorationLine": "underline",
                  },
                },
                "ref": null,
                "rendered": "#",
                "type": [Function],
              },
              "#",
            ],
            "type": undefined,
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "greyBox": false,
            "style": Object {
              "marginVertical": 19.61764705882353,
            },
            "text": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "greyBox": false,
            "style": Object {
              "marginBottom": 19.61764705882353,
            },
            "text": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "greyBox": true,
            "style": Object {
              "paddingTop": 15.714285714285714,
            },
            "text": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "greyBox": true,
            "style": Object {
              "marginBottom": 19.61764705882353,
              "paddingTop": 0,
            },
            "text": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`CustomsProcedures CustomsProcedures renders as expected with language with dive() 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <CustomsProceduresInner
    i18n={
      Object {
        "language": "de",
        "t": "test",
      }
    }
    navigation={
      Object {
        "dispatch": [Function],
      }
    }
    t={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <AppInfoSubText
          greyBox={false}
          style={
            Object {
              "marginVertical": 19.61764705882353,
            }
          }
          text=""
        />,
        <AppInfoSubText
          greyBox={false}
          style={Object {}}
          text=""
        />,
        <BulletText
          additionalText=""
          additionalTextStyle={Object {}}
          style={Object {}}
          text=""
        />,
        <BulletText
          additionalText=""
          additionalTextStyle={Object {}}
          style={Object {}}
          text=""
        />,
        <AppInfoSubText
          greyBox={false}
          style={
            Object {
              "marginVertical": 19.61764705882353,
            }
          }
          text=""
        />,
        <AppInfoSubText
          greyBox={false}
          style={Object {}}
          text=""
        />,
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[Function]}
        >
          <BulletText
            additionalText=""
            additionalTextStyle={Object {}}
            style={
              Object {
                "textDecorationLine": "underline",
                "textDecorationStyle": "solid",
              }
            }
            text=""
          />
        </TouchableOpacity>,
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[Function]}
        >
          <BulletText
            additionalText=""
            additionalTextStyle={Object {}}
            style={
              Object {
                "textDecorationLine": "underline",
                "textDecorationStyle": "solid",
              }
            }
            text=""
          />
        </TouchableOpacity>,
        <TouchableOpacity
          activeOpacity={0.2}
          onPress={[Function]}
        >
          <BulletText
            additionalText=""
            additionalTextStyle={Object {}}
            style={
              Object {
                "textDecorationLine": "underline",
                "textDecorationStyle": "solid",
              }
            }
            text=""
          />
        </TouchableOpacity>,
        <CardRowText
          greyBox={false}
          style={
            Object {
              "marginTop": 39.23529411764706,
            }
          }
          text=""
        />,
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#1A1A1A",
              "fontFamily": "roboto_light",
              "fontWeight": "300",
              "lineHeight": 33,
            }
          }
        >
          <UNDEFINED
            i18nKey="customsProceduresText11"
          >
            #
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              onPress={[Function]}
              style={
                Object {
                  "textDecorationLine": "underline",
                }
              }
            >
              #
            </Text>
            #
          </UNDEFINED>
        </Text>,
        <CardRowText
          greyBox={false}
          style={
            Object {
              "marginTop": 39.23529411764706,
            }
          }
          text=""
        />,
        <AppInfoSubText
          greyBox={false}
          style={Object {}}
          text=""
        />,
        <AppInfoSubText
          greyBox={false}
          style={
            Object {
              "marginTop": 19.61764705882353,
            }
          }
          text=""
        />,
        <AppInfoSubText
          greyBox={false}
          style={
            Object {
              "marginTop": 19.61764705882353,
            }
          }
          text=""
        />,
        <CardRowText
          greyBox={false}
          style={
            Object {
              "marginTop": 39.23529411764706,
            }
          }
          text=""
        />,
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Object {
              "color": "#1A1A1A",
              "fontFamily": "roboto_light",
              "fontWeight": "300",
              "lineHeight": 33,
            }
          }
        >
          <UNDEFINED
            i18nKey="customsProceduresText17"
          >
            #
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              onPress={[Function]}
              style={
                Object {
                  "textDecorationLine": "underline",
                }
              }
            >
              #
            </Text>
            #
          </UNDEFINED>
        </Text>,
        <AppInfoSubText
          greyBox={false}
          style={
            Object {
              "marginVertical": 19.61764705882353,
            }
          }
          text=""
        />,
        <AppInfoSubText
          greyBox={false}
          style={
            Object {
              "marginBottom": 19.61764705882353,
            }
          }
          text=""
        />,
        <CardRowText
          greyBox={true}
          style={
            Object {
              "paddingTop": 15.714285714285714,
            }
          }
          text=""
        />,
        <AppInfoSubText
          greyBox={true}
          style={
            Object {
              "marginBottom": 19.61764705882353,
              "paddingTop": 0,
            }
          }
          text=""
        />,
      ],
      "title": "",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "greyBox": false,
          "style": Object {
            "marginVertical": 19.61764705882353,
          },
          "text": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "greyBox": false,
          "style": Object {},
          "text": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "additionalText": "",
          "additionalTextStyle": Object {},
          "style": Object {},
          "text": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "additionalText": "",
          "additionalTextStyle": Object {},
          "style": Object {},
          "text": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "greyBox": false,
          "style": Object {
            "marginVertical": 19.61764705882353,
          },
          "text": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "greyBox": false,
          "style": Object {},
          "text": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": <BulletText
            additionalText=""
            additionalTextStyle={Object {}}
            style={
              Object {
                "textDecorationLine": "underline",
                "textDecorationStyle": "solid",
              }
            }
            text=""
          />,
          "onPress": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "additionalText": "",
            "additionalTextStyle": Object {},
            "style": Object {
              "textDecorationLine": "underline",
              "textDecorationStyle": "solid",
            },
            "text": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": <BulletText
            additionalText=""
            additionalTextStyle={Object {}}
            style={
              Object {
                "textDecorationLine": "underline",
                "textDecorationStyle": "solid",
              }
            }
            text=""
          />,
          "onPress": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "additionalText": "",
            "additionalTextStyle": Object {},
            "style": Object {
              "textDecorationLine": "underline",
              "textDecorationStyle": "solid",
            },
            "text": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "activeOpacity": 0.2,
          "children": <BulletText
            additionalText=""
            additionalTextStyle={Object {}}
            style={
              Object {
                "textDecorationLine": "underline",
                "textDecorationStyle": "solid",
              }
            }
            text=""
          />,
          "onPress": [Function],
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "additionalText": "",
            "additionalTextStyle": Object {},
            "style": Object {
              "textDecorationLine": "underline",
              "textDecorationStyle": "solid",
            },
            "text": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "greyBox": false,
          "style": Object {
            "marginTop": 39.23529411764706,
          },
          "text": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accessible": true,
          "allowFontScaling": true,
          "children": <UNDEFINED
            i18nKey="customsProceduresText11"
          >
            #
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              onPress={[Function]}
              style={
                Object {
                  "textDecorationLine": "underline",
                }
              }
            >
              #
            </Text>
            #
          </UNDEFINED>,
          "ellipsizeMode": "tail",
          "style": Object {
            "color": "#1A1A1A",
            "fontFamily": "roboto_light",
            "fontWeight": "300",
            "lineHeight": 33,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              "#",
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                onPress={[Function]}
                style={
                  Object {
                    "textDecorationLine": "underline",
                  }
                }
              >
                #
              </Text>,
              "#",
            ],
            "i18nKey": "customsProceduresText11",
          },
          "ref": null,
          "rendered": Array [
            "#",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "accessible": true,
                "allowFontScaling": true,
                "children": "#",
                "ellipsizeMode": "tail",
                "onPress": [Function],
                "style": Object {
                  "textDecorationLine": "underline",
                },
              },
              "ref": null,
              "rendered": "#",
              "type": [Function],
            },
            "#",
          ],
          "type": undefined,
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "greyBox": false,
          "style": Object {
            "marginTop": 39.23529411764706,
          },
          "text": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "greyBox": false,
          "style": Object {},
          "text": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "greyBox": false,
          "style": Object {
            "marginTop": 19.61764705882353,
          },
          "text": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "greyBox": false,
          "style": Object {
            "marginTop": 19.61764705882353,
          },
          "text": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "greyBox": false,
          "style": Object {
            "marginTop": 39.23529411764706,
          },
          "text": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "accessible": true,
          "allowFontScaling": true,
          "children": <UNDEFINED
            i18nKey="customsProceduresText17"
          >
            #
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              onPress={[Function]}
              style={
                Object {
                  "textDecorationLine": "underline",
                }
              }
            >
              #
            </Text>
            #
          </UNDEFINED>,
          "ellipsizeMode": "tail",
          "style": Object {
            "color": "#1A1A1A",
            "fontFamily": "roboto_light",
            "fontWeight": "300",
            "lineHeight": 33,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": Array [
              "#",
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                onPress={[Function]}
                style={
                  Object {
                    "textDecorationLine": "underline",
                  }
                }
              >
                #
              </Text>,
              "#",
            ],
            "i18nKey": "customsProceduresText17",
          },
          "ref": null,
          "rendered": Array [
            "#",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "accessible": true,
                "allowFontScaling": true,
                "children": "#",
                "ellipsizeMode": "tail",
                "onPress": [Function],
                "style": Object {
                  "textDecorationLine": "underline",
                },
              },
              "ref": null,
              "rendered": "#",
              "type": [Function],
            },
            "#",
          ],
          "type": undefined,
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "greyBox": false,
          "style": Object {
            "marginVertical": 19.61764705882353,
          },
          "text": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "greyBox": false,
          "style": Object {
            "marginBottom": 19.61764705882353,
          },
          "text": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "greyBox": true,
          "style": Object {
            "paddingTop": 15.714285714285714,
          },
          "text": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "greyBox": true,
          "style": Object {
            "marginBottom": 19.61764705882353,
            "paddingTop": 0,
          },
          "text": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <AppInfoSubText
            greyBox={false}
            style={
              Object {
                "marginVertical": 19.61764705882353,
              }
            }
            text=""
          />,
          <AppInfoSubText
            greyBox={false}
            style={Object {}}
            text=""
          />,
          <BulletText
            additionalText=""
            additionalTextStyle={Object {}}
            style={Object {}}
            text=""
          />,
          <BulletText
            additionalText=""
            additionalTextStyle={Object {}}
            style={Object {}}
            text=""
          />,
          <AppInfoSubText
            greyBox={false}
            style={
              Object {
                "marginVertical": 19.61764705882353,
              }
            }
            text=""
          />,
          <AppInfoSubText
            greyBox={false}
            style={Object {}}
            text=""
          />,
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
          >
            <BulletText
              additionalText=""
              additionalTextStyle={Object {}}
              style={
                Object {
                  "textDecorationLine": "underline",
                  "textDecorationStyle": "solid",
                }
              }
              text=""
            />
          </TouchableOpacity>,
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
          >
            <BulletText
              additionalText=""
              additionalTextStyle={Object {}}
              style={
                Object {
                  "textDecorationLine": "underline",
                  "textDecorationStyle": "solid",
                }
              }
              text=""
            />
          </TouchableOpacity>,
          <TouchableOpacity
            activeOpacity={0.2}
            onPress={[Function]}
          >
            <BulletText
              additionalText=""
              additionalTextStyle={Object {}}
              style={
                Object {
                  "textDecorationLine": "underline",
                  "textDecorationStyle": "solid",
                }
              }
              text=""
            />
          </TouchableOpacity>,
          <CardRowText
            greyBox={false}
            style={
              Object {
                "marginTop": 39.23529411764706,
              }
            }
            text=""
          />,
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#1A1A1A",
                "fontFamily": "roboto_light",
                "fontWeight": "300",
                "lineHeight": 33,
              }
            }
          >
            <UNDEFINED
              i18nKey="customsProceduresText11"
            >
              #
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                onPress={[Function]}
                style={
                  Object {
                    "textDecorationLine": "underline",
                  }
                }
              >
                #
              </Text>
              #
            </UNDEFINED>
          </Text>,
          <CardRowText
            greyBox={false}
            style={
              Object {
                "marginTop": 39.23529411764706,
              }
            }
            text=""
          />,
          <AppInfoSubText
            greyBox={false}
            style={Object {}}
            text=""
          />,
          <AppInfoSubText
            greyBox={false}
            style={
              Object {
                "marginTop": 19.61764705882353,
              }
            }
            text=""
          />,
          <AppInfoSubText
            greyBox={false}
            style={
              Object {
                "marginTop": 19.61764705882353,
              }
            }
            text=""
          />,
          <CardRowText
            greyBox={false}
            style={
              Object {
                "marginTop": 39.23529411764706,
              }
            }
            text=""
          />,
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "#1A1A1A",
                "fontFamily": "roboto_light",
                "fontWeight": "300",
                "lineHeight": 33,
              }
            }
          >
            <UNDEFINED
              i18nKey="customsProceduresText17"
            >
              #
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                onPress={[Function]}
                style={
                  Object {
                    "textDecorationLine": "underline",
                  }
                }
              >
                #
              </Text>
              #
            </UNDEFINED>
          </Text>,
          <AppInfoSubText
            greyBox={false}
            style={
              Object {
                "marginVertical": 19.61764705882353,
              }
            }
            text=""
          />,
          <AppInfoSubText
            greyBox={false}
            style={
              Object {
                "marginBottom": 19.61764705882353,
              }
            }
            text=""
          />,
          <CardRowText
            greyBox={true}
            style={
              Object {
                "paddingTop": 15.714285714285714,
              }
            }
            text=""
          />,
          <AppInfoSubText
            greyBox={true}
            style={
              Object {
                "marginBottom": 19.61764705882353,
                "paddingTop": 0,
              }
            }
            text=""
          />,
        ],
        "title": "",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "greyBox": false,
            "style": Object {
              "marginVertical": 19.61764705882353,
            },
            "text": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "greyBox": false,
            "style": Object {},
            "text": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "additionalText": "",
            "additionalTextStyle": Object {},
            "style": Object {},
            "text": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "additionalText": "",
            "additionalTextStyle": Object {},
            "style": Object {},
            "text": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "greyBox": false,
            "style": Object {
              "marginVertical": 19.61764705882353,
            },
            "text": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "greyBox": false,
            "style": Object {},
            "text": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": <BulletText
              additionalText=""
              additionalTextStyle={Object {}}
              style={
                Object {
                  "textDecorationLine": "underline",
                  "textDecorationStyle": "solid",
                }
              }
              text=""
            />,
            "onPress": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "additionalText": "",
              "additionalTextStyle": Object {},
              "style": Object {
                "textDecorationLine": "underline",
                "textDecorationStyle": "solid",
              },
              "text": "",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": <BulletText
              additionalText=""
              additionalTextStyle={Object {}}
              style={
                Object {
                  "textDecorationLine": "underline",
                  "textDecorationStyle": "solid",
                }
              }
              text=""
            />,
            "onPress": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "additionalText": "",
              "additionalTextStyle": Object {},
              "style": Object {
                "textDecorationLine": "underline",
                "textDecorationStyle": "solid",
              },
              "text": "",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "activeOpacity": 0.2,
            "children": <BulletText
              additionalText=""
              additionalTextStyle={Object {}}
              style={
                Object {
                  "textDecorationLine": "underline",
                  "textDecorationStyle": "solid",
                }
              }
              text=""
            />,
            "onPress": [Function],
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "additionalText": "",
              "additionalTextStyle": Object {},
              "style": Object {
                "textDecorationLine": "underline",
                "textDecorationStyle": "solid",
              },
              "text": "",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "greyBox": false,
            "style": Object {
              "marginTop": 39.23529411764706,
            },
            "text": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": <UNDEFINED
              i18nKey="customsProceduresText11"
            >
              #
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                onPress={[Function]}
                style={
                  Object {
                    "textDecorationLine": "underline",
                  }
                }
              >
                #
              </Text>
              #
            </UNDEFINED>,
            "ellipsizeMode": "tail",
            "style": Object {
              "color": "#1A1A1A",
              "fontFamily": "roboto_light",
              "fontWeight": "300",
              "lineHeight": 33,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                "#",
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  onPress={[Function]}
                  style={
                    Object {
                      "textDecorationLine": "underline",
                    }
                  }
                >
                  #
                </Text>,
                "#",
              ],
              "i18nKey": "customsProceduresText11",
            },
            "ref": null,
            "rendered": Array [
              "#",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "accessible": true,
                  "allowFontScaling": true,
                  "children": "#",
                  "ellipsizeMode": "tail",
                  "onPress": [Function],
                  "style": Object {
                    "textDecorationLine": "underline",
                  },
                },
                "ref": null,
                "rendered": "#",
                "type": [Function],
              },
              "#",
            ],
            "type": undefined,
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "greyBox": false,
            "style": Object {
              "marginTop": 39.23529411764706,
            },
            "text": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "greyBox": false,
            "style": Object {},
            "text": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "greyBox": false,
            "style": Object {
              "marginTop": 19.61764705882353,
            },
            "text": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "greyBox": false,
            "style": Object {
              "marginTop": 19.61764705882353,
            },
            "text": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "greyBox": false,
            "style": Object {
              "marginTop": 39.23529411764706,
            },
            "text": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "accessible": true,
            "allowFontScaling": true,
            "children": <UNDEFINED
              i18nKey="customsProceduresText17"
            >
              #
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                onPress={[Function]}
                style={
                  Object {
                    "textDecorationLine": "underline",
                  }
                }
              >
                #
              </Text>
              #
            </UNDEFINED>,
            "ellipsizeMode": "tail",
            "style": Object {
              "color": "#1A1A1A",
              "fontFamily": "roboto_light",
              "fontWeight": "300",
              "lineHeight": 33,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": Array [
                "#",
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  onPress={[Function]}
                  style={
                    Object {
                      "textDecorationLine": "underline",
                    }
                  }
                >
                  #
                </Text>,
                "#",
              ],
              "i18nKey": "customsProceduresText17",
            },
            "ref": null,
            "rendered": Array [
              "#",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "accessible": true,
                  "allowFontScaling": true,
                  "children": "#",
                  "ellipsizeMode": "tail",
                  "onPress": [Function],
                  "style": Object {
                    "textDecorationLine": "underline",
                  },
                },
                "ref": null,
                "rendered": "#",
                "type": [Function],
              },
              "#",
            ],
            "type": undefined,
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "greyBox": false,
            "style": Object {
              "marginVertical": 19.61764705882353,
            },
            "text": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "greyBox": false,
            "style": Object {
              "marginBottom": 19.61764705882353,
            },
            "text": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "greyBox": true,
            "style": Object {
              "paddingTop": 15.714285714285714,
            },
            "text": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "greyBox": true,
            "style": Object {
              "marginBottom": 19.61764705882353,
              "paddingTop": 0,
            },
            "text": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
